--- a/packages/gatsby-plugin-gwpt-tailwind/package.json
+++ b/packages/gatsby-plugin-gwpt-tailwind/package.json
@@ -15,12 +15,13 @@
     "gatsby-plugin-postcss": "^5.3.0",
     "postcss-import": "^14.0.2",
     "tailwindcss": "^3.0.2",
+    "tailwindcss-debug-screens": "^2.2.1",
     "tailwindcss-triangles": "^4.0.0",
-    "twin.macro": "^2.8.2"
+    "twin.macro": "^2.8.2",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.4"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.4",
-    "tailwindcss-debug-screens": "^2.2.1"
+
   }
 }
