--- a/packages/gatsby-plugin-gwpt-tailwind/package.json
+++ b/packages/gatsby-plugin-gwpt-tailwind/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gatsbywpthemes/gatsby-plugin-gwpt-tailwind",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "packages for tailwindcss",
   "main": "index.js",
   "author": "Alexandra Spalato",
@@ -10,18 +10,15 @@
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.0",
     "@tailwindcss/typography": "^0.5.0",
+    "autoprefixer": "^10.4.0",
     "clsx": "^1.1.1",
     "gatsby-plugin-emotion": "^7.3.0",
     "gatsby-plugin-postcss": "^5.3.0",
+    "postcss": "^8.4.4",
     "postcss-import": "^14.0.2",
     "tailwindcss": "^3.0.2",
     "tailwindcss-debug-screens": "^2.2.1",
     "tailwindcss-triangles": "^4.0.0",
-    "twin.macro": "^2.8.2",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.4"
-  },
-  "devDependencies": {
-
+    "twin.macro": "^2.8.2"
   }
 }
