--- a/examples/starter-naked/package.json
+++ b/examples/starter-naked/package.json
@@ -16,9 +16,9 @@
   "dependencies": {
     "@gatsbywpthemes/gatsby-plugin-gwpt-packages": "^2.0.1",
     "@gatsbywpthemes/gatsby-plugin-gwpt-tailwind": "^1.2.2",
+    "@gatsbywpthemes/gatsby-theme-acf-builder": "^1.0.0",
     "@gatsbywpthemes/gatsby-theme-wp-comments": "^1.0.2",
     "@gatsbywpthemes/gatsby-theme-wp-search": "^1.0.1",
-    "@gatsbywpthemes/gatsby-theme-acf-builder": "^1.0.0",
     "@headlessui/react": "^1.4.1",
     "@kunukn/react-collapse": "^2.2.9",
     "@loadable/component": "^5.15.2",
@@ -34,6 +34,8 @@
   },
   "devDependencies": {
     "babel-preset-gatsby": "^2.3.0",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "stylelint": "^14.1.0",
+    "stylelint-config-standard": "^24.0.0"
   }
 }
