--- a/packages/gatsby-theme-acf-builder/package.json
+++ b/packages/gatsby-theme-acf-builder/package.json
@@ -10,5 +10,8 @@
     "gatsby": "^4.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "dependencies": {
+    "react-slick": "^0.28.1"
   }
 }
