--- a/packages/gatsby-theme-acf-builder/package.json
+++ b/packages/gatsby-theme-acf-builder/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2"
   },
   "dependencies": {
-    "react-slick": "^0.28.1"
+    "react-slick": "^0.28.1",
+    "react-tippy": "^1.4.0"
   }
 }
