--- a/examples/starter-ginger-tailwind/package.json
+++ b/examples/starter-ginger-tailwind/package.json
@@ -14,11 +14,15 @@
     "analyze": "rm -rf .cache && ANALYZE_BUNDLE_SIZE=true gatsby build"
   },
   "dependencies": {
+    "@gatsbywpthemes/gatsby-plugin-gwpt-packages": "^2.0.8",
     "@gatsbywpthemes/gatsby-plugin-gwpt-tailwind": "^1.2.5",
     "@headlessui/react": "^1.4.3",
     "gatsby": "^4.7.1",
+    "gatsby-plugin-use-dark-mode": "^1.5.0",
+    "html-react-parser": "^1.4.12",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "babel-preset-gatsby": "^2.7.0",
