--- a/packages/gatsby-theme-acf-builder/package.json
+++ b/packages/gatsby-theme-acf-builder/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "react-slick": "^0.29.0",
-    "react-tippy": "^1.4.0"
+    "react-tippy": "^1.4.0",
+    "simple-react-lightbox": "^3.6.9-0"
   }
 }
