--- a/packages/gatsby-plugin-gwpt-utils/package.json
+++ b/packages/gatsby-plugin-gwpt-utils/package.json
@@ -6,39 +6,20 @@
   "author": "Gatsby WP Themes <contact@gatsbywpthemes.com>",
   "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
-    "@gatsbywpthemes/gatsby-plugin-wp-seo": "^2.0.7",
-    "@gatsbywpthemes/gatsby-plugin-wpcf7": "^2.0.8",
-    "@heroicons/react": "^1.0.6",
-    "@wordpress/base-styles": "^4.4.0",
-    "@wordpress/block-library": "^7.5.0",
     "babel-plugin-prismjs": "^2.1.0",
-    "color": "^4.2.3",
     "date-fns": "^2.28.0",
-    "detect-browser": "^5.3.0",
-    "gatsby-background-image": "^1.6.0",
-    "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-react-helmet": "^5.14.0",
-    "gatsby-plugin-root-import": "^2.0.8",
-    "gatsby-plugin-sass": "^5.14.0",
-    "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-webfonts": "^2.2.2",
     "lodash.merge": "^4.6.2",
     "lodash.uniqby": "^4.7.0",
-    "normalize.css": "^8.0.1",
-    "polished": "^4.2.2",
     "prismjs": "^1.28.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-headroom": "^3.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.31.2",
-    "react-icons": "^4.3.1",
     "react-share": "^4.4.0",
     "react-spinners": "^0.12.0",
     "remove-trailing-slash": "^0.1.1",
-    "sass": "1.51.0",
-    "striptags": "^3.2.0",
-    "styled-icons": "^10.45.0",
-    "typography": "^0.16.21"
+    "striptags": "^3.2.0"
   },
   "peerDependencies": {
     "gatsby": "^4.14.1",
