--- a/packages/gatsby-theme-acf-builder/package.json
+++ b/packages/gatsby-theme-acf-builder/package.json
@@ -12,8 +12,10 @@
     "react-dom": "^17.0.2"
   },
   "dependencies": {
+    "gatsby-plugin-sass": "^5.15.0",
     "react-slick": "^0.29.0",
     "react-tippy": "^1.4.0",
+    "sass": "^1.52.1",
     "simple-react-lightbox": "^3.6.9-0"
   }
 }
