--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "examples/*"
   ],
   "dependencies": {
+    "gatsby-plugin-image": "^2.15.0",
     "gatsby-source-wordpress": "^6.15.0",
     "lerna": "^4.0.0"
   },
