--- a/examples/starter-agency/package.json
+++ b/examples/starter-agency/package.json
@@ -26,6 +26,7 @@
     "@gatsbywpthemes/gatsby-theme-wp-data": "^1.1.1",
     "@gatsbywpthemes/gatsby-theme-wp-search": "^1.1.1",
     "@headlessui/react": "^1.6.1",
+    "fake-tag": "^4.0.0",
     "gatsby": "^4.17.0",
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-use-dark-mode": "^1.5.0",
