--- a/packages/gatsby-plugin-gwpt-tailwind/package.json
+++ b/packages/gatsby-plugin-gwpt-tailwind/package.json
@@ -6,6 +6,8 @@
   "author": "Alexandra Spalato",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.1",
     "@tailwindcss/line-clamp": "^0.4.0",
