--- a/examples/starter-agency/package.json
+++ b/examples/starter-agency/package.json
@@ -34,6 +34,7 @@
     "prismjs": "^1.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-headroom": "^3.2.0",
     "react-icons": "^4.3.1",
     "use-dark-mode": "^2.3.1"
   },
