--- a/.github/workflows/split.yaml
+++ b/.github/workflows/split.yaml
@@ -4,12 +4,13 @@ on:
   push:
     branches:
       - main
+      - split
     tags:
       - "*"
 
 env:
   # 1. for Github split
-  GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+  GITHUB_TOKEN: "Tt8st9jSukjjhAlxOx9uXgtt-127582-qEfSyJBjv8EPDqoHb2un"
 jobs:
   packages_split:
     runs-on: ubuntu-latest
@@ -35,7 +36,7 @@ jobs:
           package_directory: "packages/${{ matrix.package.local_path }}"
 
           # ↓ into https://github.com/symplify/easy-coding-standard repository
-          repository_organization: "dipankarmaikap"
+          repository_organization: "gatsbywpthemes"
           repository_name: "${{ matrix.package.split_repository }}"
 
           # ↓ the user signed under the split commit
