--- a/.github/workflows/split.yaml
+++ b/.github/workflows/split.yaml
@@ -10,7 +10,7 @@ on:
 
 env:
   # 1. for Github split
-  GITHUB_TOKEN: "Tt8st9jSukjjhAlxOx9uXgtt-127582-qEfSyJBjv8EPDqoHb2un"
+  GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 jobs:
   packages_split:
     runs-on: ubuntu-latest
