--- a/.github/workflows/split.yaml
+++ b/.github/workflows/split.yaml
@@ -53,7 +53,7 @@ jobs:
           package_directory: "packages/${{ matrix.package.local_path }}"
 
           # ↓ into https://github.com/symplify/easy-coding-standard repository
-          repository_organization: "dipankarmaikap"
+          repository_organization: "gatsbywpthemes"
           repository_name: "${{ matrix.package.split_repository }}"
 
           # ↓ the user signed under the split commit
