--- a/.github/workflows/split.yaml
+++ b/.github/workflows/split.yaml
@@ -23,6 +23,8 @@ jobs:
             split_repository: "gatsby-plugin-gwpt-image"
           - local_path: "gatsby-plugin-gwpt-packages"
             split_repository: "gatsby-plugin-gwpt-packages"
+            - local_path: "gatsby-theme-wp-search"
+            split_repository: "gatsby-theme-wp-search"
 
     steps:
       - uses: actions/checkout@v2
