--- a/.github/workflows/split.yaml
+++ b/.github/workflows/split.yaml
@@ -23,12 +23,30 @@ jobs:
             split_repository: "gatsby-plugin-gwpt-image"
           - local_path: "gatsby-plugin-gwpt-packages"
             split_repository: "gatsby-plugin-gwpt-packages"
+          - local_path: "gatsby-plugin-gwpt-packages-light"
+            split_repository: "gatsby-plugin-gwpt-packages-light"
+          - local_path: "gatsby-plugin-gwpt-tailwind"
+            split_repository: "gatsby-plugin-gwpt-tailwind"
+          - local_path: "gatsby-plugin-gwpt-utils"
+            split_repository: "gatsby-plugin-gwpt-utils"
+          - local_path: "gatsby-plugin-wordpress-parser"
+            split_repository: "gatsby-plugin-wordpress-parser"
+          - local_path: "gatsby-plugin-wp-seo"
+            split_repository: "gatsby-plugin-wp-seo"
+          - local_path: "gatsby-plugin-wpcf7"
+            split_repository: "gatsby-plugin-wpcf7"
           - local_path: "gatsby-theme-wp-search"
             split_repository: "gatsby-theme-wp-search"
           - local_path: "gatsby-theme-acf-builder"
             split_repository: "gatsby-theme-acf-builder"
           - local_path: "gatsby-theme-blog-data"
             split_repository: "gatsby-theme-blog-data"
+          - local_path: "gatsby-theme-blog-data-light"
+            split_repository: "gatsby-theme-blog-data-light"
+          - local_path: "gatsby-theme-wp-comments"
+            split_repository: "gatsby-theme-wp-comments"
+          - local_path: "gatsby-theme-wp-data"
+            split_repository: "gatsby-theme-wp-data"
 
     steps:
       - uses: actions/checkout@v2
