--- a/examples/starter-agency/package.json
+++ b/examples/starter-agency/package.json
@@ -32,6 +32,7 @@
     "gatsby-plugin-use-dark-mode": "^1.5.0",
     "lodash.merge": "^4.6.2",
     "prismjs": "^1.28.0",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-headroom": "^3.2.0",
