--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "version": "independent",
+  "version": "fixed",
   "command": {
     "publish": {
       "registry": "https://npm.cloudsmith.io/gatsbywpthemes/gatsby-themes/"
